public abstract class SentenceElement {
    public abstract String toString();
}
